<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/tb_toolbar_login"
                android:layout_width="0dp"
                android:layout_height="176dp"
                android:background="@drawable/shape_view_toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/label_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/seja_bem_vindo"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/myCradView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:contentPaddingTop="40dp"
                app:contentPaddingBottom="40dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_welcome">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tiyle_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="@string/text_title_email"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@drawable/edit_text_shape"
                        android:fontFamily="@font/open_sans_light"
                        android:hint="@string/text_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="15dp"
                        android:layout_marginTop="18dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tiyle_email" />

                    <TextView
                        android:id="@+id/title_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="21dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="@string/tetx_password"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_email"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_shape"
                        android:fontFamily="@font/open_sans_light"
                        android:hint="@string/text_password"
                        android:inputType="numberPassword"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="@id/et_email"
                        app:layout_constraintRight_toRightOf="@+id/et_email"
                        app:layout_constraintTop_toBottomOf="@id/title_password" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <ProgressBar
                android:id="@+id/pb_load"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:indeterminateDrawable="@drawable/shape_progress_bar"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_message_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:textColor="@color/coloPrimary"
                tools:visibility="gone"
                android:textSize="17sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/myCradView"
                tools:hint="@string/message_error"
                 />


            <ImageView
                android:id="@+id/iv_biometric"
                android:layout_width="57dp"
                android:layout_height="57dp"
                android:layout_margin="5dp"
                android:background="@drawable/background_biometric_shape"
                android:contentDescription="@string/text_description_image"
                android:padding="5dp"
                android:src="@drawable/ic_biometric"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_message_error"
                tools:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="50dp"
                android:background="@drawable/button_shape"
                android:text="@string/text_button_enter"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_biometric" />


            <TextView
                android:id="@+id/tv_new_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/text_register_new_user"
                android:textSize="14sp"
                android:fontFamily="@font/open_sans_light"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/btn_enter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>