<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:id="@+id/scrow_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragment.UserRegistrationFragment">

            <View
                android:id="@+id/view_toolbar"
                android:layout_width="0dp"
                android:layout_height="179dp"
                android:background="@drawable/shape_view_toolbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_new_training"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/text_title_new_training"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cd_user_resgistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:paddingBottom="10dp"
                app:contentPaddingBottom="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_new_training">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/tv_name_training"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="@string/text_title_name_training"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name_training"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:fontFamily="@font/open_sans_light"
                        android:hint="@string/insert_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:minLines="1"
                        android:padding="12dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_name_training" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/open_sans_light"
                        android:text="@string/text_description_title"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_name_training" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_description_training"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:maxLines="3"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/edit_text_shape"
                        android:fontFamily="@font/open_sans_light"
                        android:hint="@string/text_repeat"
                        android:lines="3"
                        android:padding="12dp"
                        android:singleLine="false"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_description" />


                    <ProgressBar
                        android:id="@+id/pb_load_training"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginVertical="30dp"
                        android:indeterminateDrawable="@drawable/shape_progress_bar"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_description_training"
                        app:layout_constraintVertical_bias="1"
                        tools:visibility="visible" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_new_training"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="159dp"
                android:layout_marginVertical="80dp"
                android:background="@drawable/button_shape"
                android:text="@string/text_btn_save"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cd_user_resgistration"
                app:layout_constraintVertical_bias="1" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>